# dwd-mcp

./: LICENSE  README.md  pyproject.toml
src/dwd_mcp/: __init__.py  client.py  models.py  server.py
tests/: __init__.py  test_client.py  test_models.py  test_server.py
